@@ -286,10 +286,12 @@ webkit_test_plugin_url_notify(NPP instance, const char* url, NPReason reason, vo
 static NPError
 webkit_test_plugin_get_value(NPP instance, NPPVariable variable, void *value)
 {
-    PluginObject* obj = static_cast<PluginObject*>(instance->pdata);
+    PluginObject* obj = 0;
+    if (instance)
+        obj = static_cast<PluginObject*>(instance->pdata);
 
     // First, check if the PluginTest object supports getting this value.
-    if (obj->pluginTest->NPP_GetValue(variable, value) == NPERR_NO_ERROR)
+    if (obj && obj->pluginTest->NPP_GetValue(variable, value) == NPERR_NO_ERROR)
         return NPERR_NO_ERROR;
     
     NPError err = NPERR_NO_ERROR;
